<resources>
    <string name="app_title">Quizzy !</string>
    <string name="app_name">Quizzy</string>

    <!-- MainView -->
    <string name="category_animals">Animals</string>
    <string name="category_politics">Politics</string>
    <string name="category_history">History</string>
    <string name="category_geography">Geo</string>
    <string name="category_books">Books</string>
    <string name="category_film">Film</string>
    <string name="category_music">Music</string>
    <string name="category_tv">TV</string>
    <string name="category_science">Science</string>
    <string name="main_pick_a_category">Pick a category</string>

    <!--Loading-->
    <string name="start_button">Start</string>
    <string name="loading_content">Loading content...</string>

    <!-- GamePlay -->
    <string name="game_play_action_bar_text">Game</string>
    <string name="a_answer">A</string>
    <string name="b_answer">B</string>
    <string name="c_answer">C</string>
    <string name="d_answer">D</string>
    <string name="true_answer">True</string>
    <string name="false_answer">False</string>
    <string name="question_text">Dummy Text</string>

    <!--Results-->
    <string name="results_action_bar_text">Results</string>
    <string name="btn_play_again">Play again</string>
    <string name="btn_back_to_home">Back to home</string>
    <string name="result">Your score :</string>
    <string name="points">points</string>
    <string name="no_more_data">Sorry, no more data available, please choose other category</string>

    <!--Login-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="fill_in_input_fields_prompt">Please fill in the fields</string>

    <!--Register-->
    <string name="hint_name">Fullname</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>

    <!--Navbar-->
    <string name="name">Fullname</string>
    <string name="scores">Scores</string>
    <string name="settings">Settings</string>
    <string name="fake_name">Jane Doe</string>
    <string name="fake_email">janedoe28@gmail.com</string>
    <string name="log_out">Log out</string>

    <!--Toasts-->
    <string name="technical_issues_toast_text">Sorry but we\'re experiencing technical issues with connection, please try again later</string>
    <string name="fill_in_mandatory_fields_toast">Please fill in mandatory fields</string>
    <string name="no_user_found_at_login">No user found for the given credentials, please register first</string>
    <string name="invalid_email">Invalid email given, please try again</string>
    <string name="invalid_password">Invalid password given</string>
    <string name="empty_input">Empty input. Please type in the required data</string>
    <string name="successful_registration">Registration successful, you can now log in</string>

    <!--Dialogs-->
    <string name="ok">Ok</string>
    <string name="on_log_out_message">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="on_quit_message">Are you sure you want to quit</string>

    <!--Settings -->
    <string name="level">Level</string>
    <string-array name="level_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="questions_per_session">Questions per session</string>
    <string-array name="questions_per_session_array">
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string name="answer_time">Answer time in seconds</string>
    <string-array name="answer_time_array">
        <item>15</item>
        <item>25</item>
        <item>35</item>
    </string-array>

    <string name="save_progress">Save progress</string>
    <string name="save_settings">Save</string>
    <!--Scores -->
    <string name="category_name">Dummy category</string>
    <string name="category_points">120</string>
</resources>
